--- a/docs/career/2020.md
+++ b/docs/career/2020.md
@@ -26,7 +26,7 @@ Mysql 方面看了《Mysql 技术内幕 InnoDB 存储引擎》《Mysql 8 Cookboo
 https://github.com/zhangpanqin/MFlyYou
 ```
 
-<img src="http://oss.mflyyou.cn/blog/20210110021752.png?author=zhangpanqin" alt="image-20210110021752345" style="zoom:50%;" />
+<img src="/blog/20210110021752.png?author=zhangpanqin" alt="image-20210110021752345" style="zoom:50%;" />
 
 也搭建了自己的博客网站 [http://mflyyou.cn/](http://mflyyou.cn/)
 
@@ -36,7 +36,7 @@ https://github.com/zhangpanqin/MFlyYou
 https://github.com/zhangpanqin/fly-jdk8
 ```
 
-![image-20210110022157545](http://oss.mflyyou.cn/blog/20210110022157.png?author=zhangpanqin)
+![image-20210110022157545](/blog/20210110022157.png?author=zhangpanqin)
 
 ### 究竟是喜欢研究技术，还是研究完所有的技术？
 
