--- a/docs/java/jvm/G1.md
+++ b/docs/java/jvm/G1.md
@@ -2,7 +2,7 @@
 
 ### G1 简介
 
-![img](./G1.assets/types-of-garbage-collector-in-java5)
+![img](./G1.assets/types-of-garbage-collector-in-java5.png)
 
 G1 将堆划分为不连续空间的 region，region 是 G1堆和操作系统交互的最小管理单位。
 
